feat: implement registration auth handler prototype
